# garrison

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_EN.md  audit.toml  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codeql-config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
benches/: bulwark_benchmark.rs  garrison_benchmark.rs
bulwark-macros/: Cargo.toml
bulwark-macros/src/: lib.rs
bulwark-macros/tests/: compile_test.rs
bulwark-macros/tests/ui/: async_fn_pass.rs  sync_fn_pass.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  FAQ.md  RELEASING.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  architecture.md  configuration.md  deployment.md  development.md  faq.md  roadmap.md  troubleshooting.md
docs/decisions/: A-009-oxcache-sync-api-evaluation.md  A-010-dao-keys-performance-evaluation.md  A-011-apikey-security-migration.md
examples/: Cargo.toml  apikey_management.rs  auth_logic_impl.rs  axum_integration.rs  basic_login.rs  config_loader.rs  context_request.rs  custom_plugin.rs  dao_operations.rs  event_listener.rs  exception_handling.rs  httpbasic_login.rs  httpdigest_login.rs  json_template.rs  jwt_login.rs  manager_lifecycle.rs  oauth2_flow.rs  permission_check.rs  session_management.rs  sign_protocol.rs  sign_utils.rs  sso_flow.rs  strategy_firewall.rs  temp_credential.rs  token_styles.rs  totp_login.rs
examples/src/: apikey_management.rs  apikey_namespace.rs  auth_logic_impl.rs  axum_integration.rs  config_loader.rs  context_request.rs  custom_plugin.rs  event_listener.rs  i18n_usage.rs  json_template.rs  jwt_login.rs  jwt_modes.rs  lib.rs  macro_annotations.rs  oauth2_flow.rs  observability_setup.rs  oidc_handler.rs  parameter_query.rs  password_login.rs  permission_check.rs  session_management.rs  sign_utils.rs  sso_server.rs  strategy_firewall.rs  strategy_registry.rs  token_styles.rs  totp_login.rs  v0_5_0_demo.rs  web_actix_example.rs  web_warp_example.rs
examples/src/apikey/: apikey_management.rs  apikey_namespace.rs  mod.rs
examples/src/authentication/: basic_login.rs  httpbasic_login.rs  httpdigest_login.rs  jwt_login.rs  jwt_modes.rs  mod.rs  password_login.rs  totp_login.rs
examples/src/authorization/: abac_policy.rs  mod.rs  permission_check.rs  strategy_firewall.rs  strategy_registry.rs  token_styles.rs
examples/src/demo/: mod.rs  v0_5_0_demo.rs
examples/src/extension/: auth_logic_impl.rs  custom_plugin.rs  event_listener.rs  macro_annotations.rs  manager_lifecycle.rs  mod.rs  session_management.rs
examples/src/infrastructure/: alone_cache.rs  auth_server.rs  backend_remote.rs  cache_redis.rs  config_loader.rs  dao_operations.rs  exception_handling.rs  i18n_usage.rs  json_template.rs  mod.rs  observability_setup.rs  parameter_query.rs
examples/src/oauth2/: mod.rs  oauth2_flow.rs  oauth2_pkce.rs  oidc_handler.rs  scope_handler.rs  sso_flow.rs  sso_server.rs  token_introspection.rs
examples/src/security/: mod.rs  secure_module.rs
examples/src/sign/: mod.rs  sign_protocol.rs  sign_utils.rs  temp_credential.rs
examples/src/web/: axum_integration.rs  context_request.rs  grpc_interceptor.rs  mod.rs  web_actix_example.rs  web_warp_example.rs
examples/tests/: abac_policy.rs  alone_cache.rs  apikey_management.rs  apikey_namespace.rs  auth_logic_impl.rs  auth_server.rs  axum_integration.rs  backend_remote.rs  basic_login.rs  cache_redis.rs  config_loader.rs  context_request.rs  custom_plugin.rs  dao_operations.rs  event_listener.rs  exception_handling.rs  grpc_interceptor.rs  httpbasic_login.rs  httpdigest_login.rs  i18n_usage.rs  json_template.rs  jwt_login.rs  jwt_modes.rs  macro_annotations.rs  manager_lifecycle.rs  oauth2_flow.rs  oauth2_pkce.rs  observability_setup.rs  oidc_handler.rs  parameter_query.rs  password_login.rs  permission_check.rs  scope_handler.rs  secure_module.rs  session_management.rs  sign_protocol.rs  sign_utils.rs  sso_flow.rs  sso_server.rs  strategy_firewall.rs  (+7 more)
garrison-macros/: Cargo.toml
garrison-macros/src/: lib.rs
garrison-macros/tests/: compile_test.rs
garrison-macros/tests/ui/: async_fn_pass.rs  sync_fn_pass.rs
locales/: en.ftl  zh.ftl
mdbook/: book.toml
mdbook/src/: CONTRIBUTING.md  README.md  SECURITY.md  SUMMARY.md  abstraction-layers.md  architecture.md  auth-session.md  configuration.md  deployment.md  development.md  faq.md  firewall.md  getting-started.md  grpc.md  i18n.md  observability-logs.md  observability-metrics.md  observability-traces.md  permission-rbac.md  plugin-system.md  protocols.md  roadmap.md  secure-modules.md  troubleshooting.md  web-actix.md  web-axum.md  web-warp.md
scripts/: archive_change.sh  e2e_analyze.py  e2e_run.sh  merge_delta_spec.py  release.sh  unify_copyright.py
src/: error.rs  i18n.rs  lib.rs  prelude.rs
src/abac/: engine.rs  init.rs  loader.rs  mod.rs  tests.rs
src/account/: metrics.rs  mod.rs
src/annotation/: extractors.rs  impls.rs  mock.rs  mod.rs  modes.rs  tests.rs
src/backend/: embedded.rs  kit_builder.rs  mod.rs  remote.rs  tests.rs  types.rs
tests/: acceptance_criteria.rs  annotation_integration.rs  annotation_macros_integration.rs  auth_server_integration.rs  axum_integration.rs  db_mysql_testcontainers.rs  dbnexus_integration.rs  e2e.rs  integration.rs  integration_v0_5_0.rs  jwt_modes_integration.rs  keycloak_oidc_integration.rs  login_password_integration.rs  plugin_listener_integration.rs  postgres_repository_integration.rs  protocol.rs  protocol_apikey_edge_cases.rs  protocol_jwt_edge_cases.rs  protocol_jwt_integration.rs  protocol_oauth2_edge_cases.rs  protocol_oauth2_integration.rs  protocol_sso_edge_cases.rs  protocol_sso_integration.rs  refresh_token_integration.rs  repository.rs  repository_error_paths.rs  repository_integration.rs  strategy_registry_integration.rs  tenant_isolation_integration.rs
(+374 files in other folders)
