[package]
name = "bulwark"
version = "0.6.6"
edition = "2021"
rust-version = "1.85"  # MSRV: 部分 deps（如 inventory 0.3）要求 edition2024 → Rust 1.85+
authors = ["Kirky.X"]
license = "Apache-2.0"
description = "Bulwark - 面向 Rust 生态的身份认证鉴权框架，借鉴 Sa-Token v1.45.0 设计"
homepage = "https://github.com/Kirky-X/bulwark"
repository = "https://github.com/Kirky-X/bulwark"
documentation = "https://docs.rs/bulwark"
readme = "README.md"
keywords = ["auth", "authentication", "authorization", "jwt", "rbac"]
categories = ["authentication", "web-programming"]

[workspace]
members = [".", "examples", "bulwark-macros"]
resolver = "2"

[lib]
name = "bulwark"
path = "src/lib.rs"

[dependencies]
# === Required dependencies ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confers = "0.4"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time"] }
once_cell = "1.19"
inventory = "0.3"
thiserror = "2.0"
tracing = "0.1.43"
async-trait = "0.1"
parking_lot = "0.12"
dashmap = { version = "6", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
http = "1"
unicode-normalization = "0.1"

# === Optional dependencies (feature-gated) ===
axum = { version = "0.8", optional = true, default-features = false, features = ["json"] }
actix-web = { version = "4", optional = true, default-features = false }
warp = { version = "0.4", optional = true, default-features = false }
jsonwebtoken = { version = "10", optional = true, default-features = false, features = ["rust_crypto"] }
reqwest = { version = "0.13", optional = true, default-features = false, features = ["json", "rustls", "rustls-native-certs", "form"] }
totp-rs = { version = "5", optional = true }
sha2 = { version = "0.11", optional = true }
hmac = { version = "0.13", optional = true }
base64 = { version = "0.22", optional = true }
md5 = { version = "0.7", optional = true }
base32 = { version = "0.5", optional = true }
argon2 = { version = "0.5", optional = true }
bcrypt = { version = "0.15", optional = true }
rand = { version = "0.8", optional = true }
zeroize = { version = "1", optional = true, features = ["derive"] }
regex = { version = "1", optional = true }
oxcache = { version = "0.3.3", optional = true }
# default-features = false：dbnexus 0.3+ 禁止 embedded(sqlite) 与 server-side(postgres) 混用，
# 由 db-base feature 显式启用基础 features，db-sqlite / db-postgres 分别启用 sqlite / postgres。
dbnexus = { version = "0.3", optional = true, default-features = false }
# dbnexus 未 re-export 这些类型，需显式声明为直接依赖。
sea-orm = { version = "2.0.0-rc.37", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls"], optional = true }
prometheus = { version = "0.14", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["fmt", "json", "env-filter"] }
opentelemetry = { version = "0.30", optional = true, default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.30", optional = true, default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.30", optional = true, default-features = false, features = ["trace", "grpc-tonic"] }
# 需 transport feature 以启用 Interceptor trait
tonic = { version = "0.13", optional = true, default-features = false, features = ["transport"] }
fluent = { version = "0.17", optional = true, default-features = false }
# fluent-rs 内部依赖，显式声明以直接使用
unic-langid = { version = "0.9", optional = true, default-features = false }
miette = { version = "7", optional = true, default-features = false }
bulwark-macros = { path = "bulwark-macros", version = "0.5.1", optional = true }
# 注意：rsa 0.9 内部依赖 sha2 0.10，与项目 sha2 0.11 不兼容，故用 `rsa::pkcs1v15::SigningKey` + `rsa::sha2::Sha256`（sha2 0.10 re-export）
rsa = { version = "0.9", optional = true, features = ["sha2", "pem"] }
unicode-security = { version = "0.1", optional = true }
maxminddb = { version = "0.29", optional = true }
quick-xml = { version = "0.41", optional = true, default-features = false, features = ["serialize"] }
# 版本 ~1.2 与 oxcache 0.3.3 间接依赖的 redis 保持一致
redis = { version = "~1.2", optional = true, default-features = false, features = ["aio", "tokio-comp", "connection-manager", "script"] }
futures = { version = "0.3", optional = true, default-features = false, features = ["std"] }
# moka：三层缓存 L1 内存缓存（feature-gated: three-tier-cache）
moka = { version = "0.12", optional = true, default-features = false, features = ["future"] }

[dev-dependencies]
toml = "1.0"
tokio-test = "0.4"
mockall = "0.15"
tempfile = "3.27"
# serial_test 用于串行化依赖 std::env::set_var 的测试，避免多线程并发污染环境变量
serial_test = "3"
tower = { version = "0.5", default-features = false, features = ["util"] }
http-body-util = "0.1"
wiremock = "0.6"
# warp test feature 仅在测试时启用 warp::test 模块（不影响生产构建）
warp = { version = "0.4", default-features = false, features = ["test"] }
# rsa 0.9 已是 jsonwebtoken rust_crypto feature 的间接依赖，不增加构建开销
rsa = "0.9"
rand = "0.8"
testcontainers = "0.27"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []

# === 核心模块（always on，无开关） ===
# core / stp / annotation / router / dao / strategy / session / config / context / json / exception / manager / plugin
# 这些模块无 feature flag，总是编译

# === 核心扩展：决策溯源 ===
# 启用后 PermissionChecker::authorize 的实现者可填充 checked_permissions / matched_roles / trace_id 字段。
# 不启用时这三字段为空 vec/None，仅保留 allowed 与 reason（性能优先）。
decision-trace = []

# === 核心扩展：权限注册表 ===
# 启用后通过 inventory::submit! 在编译期声明权限 -> required_roles 映射，
# 启动时 PermissionRegistry::from_inventory() 收集所有静态注册项，
# PermissionChecker::check_permission 前调用 validate() 校验权限已注册。
permission-registry = []

# === 核心扩展：请求对象式授权 API ===
# 启用后提供 Authorizer trait（公开 API，不假设具体实现），
# 通过 blanket impl 任何 PermissionChecker 自动实现 Authorizer。
# 依赖 decision-trace 以确保 Decision 的 trace 字段可用。
authorize-api = ["decision-trace"]

# === 核心扩展：显式 Manager API ===
# 启用后提供显式 Manager struct（不依赖全局单例），通过 new(logic) 注入 BulwarkLogic，
# 支持 authorize(req) / check_permission(login_id, perm) 实例方法。
# 依赖 authorize-api 以复用 AuthRequest / Decision / Authorizer 类型。
manager-explicit = ["authorize-api"]

# === 核心扩展：多租户逻辑隔离 ===
# 启用后 BulwarkDaoOxcache 的 set/get/delete 在 TENANT task_local 上下文存在时
# 自动为 key prepend `tenant:{tid}:` 前缀，实现缓存层租户隔离。
# 注意：Repository SQL 过滤不门控此 feature（始终生效，安全优先）。
tenant-isolation = []

# === 核心扩展：forbid 优先语义（safe-defaults） ===
# 启用后 DecisionReason 新增 Forbid(String) 变体，Decision 新增 forbid()/is_forbid() 方法，
# 提供"强制拒绝"语义：Forbid 决策不可被 Allow 覆盖，组合时优先级最高。
# 同时提供 DecisionCombinator::combine() 聚合多个决策（Forbid > Deny > Allow）。
safe-defaults = []

# === 聚合特性：等价于原 default，方便快速启用全部默认后端 ===
all-defaults = ["cache-memory", "db-sqlite", "web-axum"]

# === 缓存后端（通过 oxcache，默认 full 包含 L1 moka + L2 redis） ===
# cache-memory 与 cache-redis 均启用 oxcache（语义别名，区分用途）
cache-memory = ["oxcache"]
cache-redis = ["oxcache", "dep:redis", "dep:futures"]
# 注意：oxcache 无 caffeine feature（L1 用 moka），cache-caffeine 已移除

# === 数据库后端（通过 dbnexus 0.3） ===
# db-base：dbnexus 基础 features（runtime + permission + sql-parser + macros + config-env + with-time
# + auto-migrate）+ sea-orm。auto-migrate 是 backend-agnostic 的，SQLite/PostgreSQL 均需要。
# 内部 feature，由 db-sqlite / db-postgres 继承，不直接暴露给用户。
# dbnexus 0.3+ 禁止 embedded(sqlite) 与 server-side(postgres) 混用，故 db-sqlite / db-postgres 互斥。
db-base = [
    "dbnexus",
    "dbnexus/runtime-tokio-rustls",
    "dbnexus/permission",
    "dbnexus/sql-parser",
    "dbnexus/macros",
    "dbnexus/config-env",
    "dbnexus/with-time",
    "dbnexus/auto-migrate",
    "sea-orm",
]
# db-sqlite 启用 sqlite embedded 驱动
db-sqlite = ["db-base", "dbnexus/sqlite"]
# db-postgres 启用 postgres server-side 驱动（sea-orm/sqlx-postgres 由 dbnexus/postgres 传递启用）
db-postgres = ["db-base", "dbnexus/postgres"]
# db-mysql 启用 mysql server-side 驱动（sea-orm/sqlx-mysql 由 dbnexus/mysql 传递启用）
db-mysql = ["db-base", "dbnexus/mysql"]

# === 协议层插件 ===
protocol-oauth2 = ["reqwest", "dep:sha2", "dep:base64"]
protocol-sso = ["reqwest", "dep:quick-xml", "dep:sha2", "hmac", "dep:base64"]
protocol-jwt = ["jsonwebtoken", "dep:sha2"]
protocol-sign = ["dep:sha2", "hmac", "dep:base64"]
protocol-apikey = []
protocol-temp = []
# protocol-zeroize：协议层密钥零化（Drop 时清零 secret 字段，防止内存残留）
protocol-zeroize = ["zeroize"]
# OIDC 扩展（id_token 签发/验证 + discovery endpoint），依赖 protocol-jwt + protocol-oauth2
protocol-oidc = ["protocol-jwt", "protocol-oauth2"]
# OAuth2 Scope Handler 注册表（ScopeHandler trait + ScopeRegistry），依赖 protocol-oauth2
oauth2-scope-handler = ["protocol-oauth2"]
# SSO Server 独立抽象（SsoServer trait + CenterIdConverter + SsoChannel），依赖 protocol-sso
protocol-sso-server = ["protocol-sso"]

# === 安全模块 ===
secure-totp = ["totp-rs", "dep:base32"]
secure-sign = ["dep:sha2", "hmac", "dep:base64", "md5"]
secure-httpbasic = ["dep:base64"]
secure-httpdigest = ["dep:sha2", "dep:base64", "md5"]
# Unicode 同形异义字检测
# 启用后提供 check_confusable 函数 + PermissionRegistry::register 集成（tracing::warn）
secure-confusable = ["dep:unicode-security"]
# 敏感数据脱敏（手机号 / 身份证 / 邮箱 / 银行卡 + JSON 递归脱敏），无额外依赖
secure-masking = []
# XSS 防护（HTML 转义 / 白名单过滤），无额外依赖
secure-xss = []
# SMS 验证码渐进式限速（双窗口限速 + 验证码服务 + 异常发送检测）
# 依赖 rand 生成密码学安全验证码（rand 已是 optional dep，行 56）
sms-rate-limit = ["dep:rand"]

# === 账号安全引擎 ===
# account-credential：统一凭证模型 SPI（Credential trait + PasswordCredential + TotpCredential）
account-credential = ["dep:argon2", "dep:bcrypt", "dep:rand", "dep:sha2", "dep:base32"]
# account-credential-zeroize：在 account-credential 基础上启用 zeroize
account-credential-zeroize = ["account-credential", "zeroize"]
# account-policy：密码策略套件（12+ PasswordPolicyRule），依赖 account-credential + regex（RegexRule）
account-policy = ["account-credential", "dep:regex"]
# account-lockout：用户级双态锁定（与 BruteForceStrategy 组合）
account-lockout = ["firewall"]
# account-authflow：AuthenticationFlow DSL（全认证流程编排）
account-authflow = ["account-credential", "account-policy", "account-lockout"]

# === Web 框架适配 ===
web-axum = ["axum", "axum/tokio", "axum/http1"]
web-actix = ["actix-web"]
web-warp = ["warp"]

# === Web 安全中间件 ===
# web-waf：WAF 请求内容校验（路径/方法/危险字符检测），依赖 web-axum
web-waf = ["web-axum"]
# web-cors：CORS 跨域资源共享中间件，依赖 web-axum
web-cors = ["web-axum"]
# web-csrf：CSRF 跨站请求伪造防护中间件（Double-Submit Cookie 模式），依赖 web-axum + rand + base64
web-csrf = ["web-axum", "dep:rand", "dep:base64"]

# === 过程宏注解（#[check_login]/#[check_permission]/#[check_role]） ===
# 依赖 web-axum（宏生成的 wrapper 返回 axum::response::Response）
annotation-macros = ["dep:bulwark-macros", "web-axum"]

# === 扩展 ===
# alone-cache：多 Redis 实例隔离（AloneCache 装饰器 + AloneCacheManager），无额外依赖
alone-cache = []
# parameter-query：参数化查询机制（ParameterQuery trait + Builder + async），无额外依赖
parameter-query = []

# === 审计日志 ===
# audit-log 依赖 listener（AuditLogListener 实现 BulwarkListener trait）
audit-log = ["listener"]

# === 安全防护套件 ===
# firewall 为基础 trait + FirewallContext + StrategyRegistration，无额外依赖
firewall = []
# 各 strategy 实现独立依赖 firewall 基础 trait
# firewall-bruteforce / firewall-ratelimit / firewall-ddos 仅依赖 oxcache（通过 BulwarkDao 抽象）
firewall-bruteforce = ["firewall"]
firewall-ratelimit = ["firewall", "dep:rand"]
firewall-anomalous = ["firewall"]
firewall-geoip = ["firewall"]
firewall-ddos = ["firewall"]
# firewall-waf：WAF 级防火墙（策略层 Hook 链 + 9 个内置 Hook + axum middleware 适配器）
# 与 web-waf（web 层 WafRule）的区别：firewall-waf 位于 strategy/firewall 层，
# 使用 WafHook trait + WafVerdict 短路链模式，返回 FirewallBlocked（403），
# 新增 Host/Header/Parameter/BannedChar 校验。依赖 firewall（基础 trait）+ web-axum（middleware 适配器）。
firewall-waf = ["firewall", "web-axum"]
# rate-limit-redis：Redis 限流后端（RedisRateLimiter + Lua 脚本），继承 cache-redis（redis + futures）
rate-limit-redis = ["cache-redis"]
# firewall-maxminddb：生产 MaxMindDb 后端（MaxMindDbGeoLookup + MaxMindDbCountryLookup）
# 依赖 firewall-geoip（CountryLookup）+ firewall-anomalous（GeoLookup）+ maxminddb crate
firewall-maxminddb = ["dep:maxminddb", "firewall-geoip", "firewall-anomalous"]
# anomalous-detector-dual：异常登录定时分析引擎（双引擎的定时部分）
# 与实时引擎 firewall-anomalous 互补，定时扫描历史登录记录识别异常模式（burst/geo_jump/device_mutation）。
# 依赖 listener（spec R-006 要求广播 AnomalousLoginDetected 事件）。
anomalous-detector-dual = ["firewall", "listener"]

# === 安全告警系统 ===
# 启用后提供 SecurityAlertEvent / AlertListener / AnomalyDetector 抽象，
# 支持异常登录检测、新设备告警、封禁触发等安全事件广播。
security-alert = []
# 设备绑定策略：依赖 security-alert（LooseBinding 需要广播 NewDeviceLogin 告警事件）。
# 启用后提供 DeviceBindingPolicy trait 抽象，StrictBinding/LooseBinding/Disabled 由后续任务实现。
device-binding = ["security-alert"]

# === 二级认证瞬态标记 ===
# 启用后 BulwarkLogicDefault 覆写 open_safe/is_safe/close_safe 方法，
# 在 TokenSession.safe_services 中记录/查询/移除 service 级二级认证标记。
safe-auth = []

# === 动态活跃超时 ===
# 启用后支持基于用户活跃行为的动态会话超时（active timeout），
# 区别于固定 timeout，可根据最后活跃时间动态延长/缩短会话有效期。
dynamic-active-timeout = []

# === 三层缓存架构 ===
# 启用后提供 UserCacheService，实现 L1(moka 内存) + L2(DAO 持久化) + L3(interface 回调) 三层缓存，
# 用于权限/角色/用户信息的加速查询。依赖 moka future backend。
three-tier-cache = ["dep:moka"]

# === login_token_map 持久化 ===
# 启用后 login_token_map 内存层与 DAO AccountSession.tokens 双层同步，
# 重启后可通过 rebuild_login_token_map() 重建内存层。
login-token-map-persistence = []

# === 匿名 Session ===
# 启用后支持未登录用户的匿名会话（购物车、访客浏览场景），
# 通过 token:session:anon:{token} key 空间隔离匿名会话。
anonymous-session = []

# === 会话搜索 ===
# 启用后支持按关键字搜索 Token-Session / Account-Session，
# 提供分页与排序（创建时间 / 最后活跃时间）。
session-search = []

# === 社交登录 ===
# social-wechat：微信扫码登录（WechatProvider），依赖 protocol-oauth2（reqwest HTTP client）
social-wechat = ["protocol-oauth2"]
# social-alipay：支付宝授权登录（AlipayProvider），依赖 protocol-oauth2 + rsa 签名
# 启用 rsa（含 sha2/pem features，用于 RSA2 签名 + PEM 解析）+ base64（签名值编码）
social-alipay = ["protocol-oauth2", "rsa", "dep:base64"]

# === Keycloak OIDC RP ===
# keycloak-oidc：Keycloak 作为 OIDC 依赖方（KeycloakProvider），依赖 protocol-oidc（JWKS 验签 + discovery）
keycloak-oidc = ["protocol-oidc"]

# === 可观测性 ===
listener = []
tracing-log = ["tracing/log"]
metrics-prometheus = ["prometheus", "tracing-subscriber"]
# OpenTelemetry 分布式追踪（OTLP gRPC 导出），独立门控以隔离重依赖
observability-otlp = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-subscriber"]
# gRPC 鉴权拦截器（tonic::Interceptor 实现）
grpc = ["tonic"]
# 异常消息国际化（中英文切换，fluent-rs）
i18n = ["fluent", "unic-langid"]
# miette 富错误渲染
# 启用后 BulwarkError 实现 miette::Diagnostic trait（保留 thiserror::Error derive）
miette = ["dep:miette"]
# 声明式 JSON 测试套件
# 启用后提供 JsonTestSuite / JsonTestCase / TestReport 类型，支持从 JSON 文件
# 加载测试用例并运行 Authorizer trait，输出测试报告。
# 依赖 authorize-api（提供 Authorizer trait + AuthRequest/Decision 公开 API）。
bulwark-testing = ["authorize-api"]

# === 聚合特性 ===
full = [
    "cache-memory", "cache-redis",
    "db-sqlite",
    "protocol-oauth2", "protocol-sso", "protocol-jwt", "protocol-sign", "protocol-apikey", "protocol-temp", "protocol-zeroize",
    "protocol-oidc", "oauth2-scope-handler", "protocol-sso-server",
    "secure-totp", "secure-sign", "secure-httpbasic", "secure-httpdigest", "secure-masking",
    "secure-xss", "sms-rate-limit",
    "account-credential", "account-credential-zeroize", "account-policy", "account-lockout", "account-authflow",
    "web-axum", "web-actix", "web-warp",
    "web-waf", "web-cors", "web-csrf",
    "alone-cache", "parameter-query",
    "listener", "metrics-prometheus", "observability-otlp", "grpc", "i18n",
    "annotation-macros",
    "decision-trace", "tenant-isolation", "safe-defaults",
    "firewall", "firewall-bruteforce", "firewall-ratelimit", "firewall-anomalous",
    "firewall-geoip", "firewall-ddos", "firewall-maxminddb", "firewall-waf",
    "anomalous-detector-dual",
    "rate-limit-redis",
    "security-alert",
    "device-binding",
    "safe-auth",
    "dynamic-active-timeout",
    "three-tier-cache",
    "login-token-map-persistence",
    "anonymous-session",
    "session-search",
    "social-wechat", "social-alipay",
]

# production 使用 db-postgres（dbnexus 0.3+ 已支持 postgres feature）
production = [
    "cache-redis", "db-postgres", "web-axum",
    "protocol-jwt", "protocol-sign", "secure-sign",
    "listener", "tracing-log", "metrics-prometheus",
    "tenant-isolation",
    "security-alert", "device-binding",
    "safe-defaults",
    "firewall-waf",
    "three-tier-cache",
    "sms-rate-limit",
]

development = [
    "cache-memory", "db-sqlite", "web-axum",
]

# === 示例文件位于独立 workspace member（examples/），详见 examples/Cargo.toml ===

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# === 测试目标 ===
# db_mysql_testcontainers：MySQL 8.0 testcontainers 集成测试
[[test]]
name = "db_mysql_testcontainers"
path = "tests/db_mysql_testcontainers.rs"
required-features = ["db-mysql"]

# === 基准测试目标 ===
# bulwark_benchmark：criterion 基准测试套件
# 包含 4 个基准场景：login_flow / token_verify_stateless / permission_check / oxcache_backend_switch
# harness = false：使用 criterion 自己的 main 函数（非标准 libtest harness）
[[bench]]
name = "bulwark_benchmark"
path = "benches/bulwark_benchmark.rs"
harness = false
